k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtar
  labels:
    name: speedtar
    app.kubernetes.io/name: speedtar
    app.kubernetes.io/component: namespace
